Fix add server bg not showing on certain languages

--- a/parts/_addServer.scss
+++ b/parts/_addServer.scss
@@ -1,8 +1,11 @@
 // Main Background
-.focusLock-Ns3yie[aria-label="Add a Server"] {
+.wrapper-2ZbzR9 {
     background: $addServerBg !important;
     background-position: center !important;
     background-size: cover !important;
+    > div {
+        background: rgba(0,0,0,.5) !important;
+    }
 }
 
 // Eliminating between layers
@@ -12,10 +15,6 @@
 
 .slide-2pHaq5 {
     background: rgba($color: #000000, $alpha: .5) !important;
-}
-
-.wrapper-2ZbzR9 {
-    background: rgba(0, 0, 0, 0.5) !important;
 }
 
 // Create & join boxes
